SmartRoutes/Content/Site.css
/* Common page styling. */
#sr-background {
    background-color: #d7d7d7;
}


/* Styles for common banners.
-------------------------------------------------------------*/
#sr-top-banner-view {
    background-color: #1049a9;
}

#sr-bottom-banner-view {
    background-color: #052c6e;
}

.sr-banner-view {
    height: 75px;
}

/* Common styling
------------------------------------------------------------*/
.sr-section-heading {
    background-color: #4479d4;
    height: 50px;
}

#sr-template-container {
    display: none;
}

.sr-alert-error {
    display: none;
}

/* Common styling for text areas
------------------------------------------------------------*/
.sr-section-title {
    background-color: #4479d4;
    height: 35px;
}

.sr-section-title-text {
    font: 30px arial;
    color: white;
}

.sr-text-area-text {
    background-color: white;
    height: 250px;
}

